--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ facebook_username: LUDAmx
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-primer
 plugins:
   - jekyll-feed
 
